; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_probe_enable.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_probe_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { %struct.TYPE_11__* }
%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }

@dtrace_lock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@dtrace_ecb_create_cache = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_12__*, i32*)* @dtrace_probe_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dtrace_probe_enable(i32* %0, %struct.TYPE_12__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_12__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_12__* %1, %struct.TYPE_12__** %6, align 8
  store i32* %2, i32** %7, align 8
  %13 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %14 = call i32 @LCK_MTX_ASSERT(i32* @dtrace_lock, i32 %13)
  store i32* null, i32** @dtrace_ecb_create_cache, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %6, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @dtrace_ecb_create_enable(i32* null, %struct.TYPE_12__* %18, i32* %19)
  store i32 0, i32* %4, align 4
  br label %41

21:                                               ; preds = %3
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @dtrace_probekey(i32* %22, i32* %8)
  %24 = load %struct.TYPE_12__*, %struct.TYPE_12__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 0
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @dtrace_cred2priv(i32 %31, i32* %9, i32* %10, i32* %11)
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load %struct.TYPE_12__*, %struct.TYPE_12__** %6, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @dtrace_match(i32* %8, i32 %33, i32 %34, i32 %35, i32 (i32*, %struct.TYPE_12__*, i32*)* @dtrace_ecb_create_enable, %struct.TYPE_12__* %36, i32* %37)
  store i32 %38, i32* %12, align 4
  %39 = call i32 @dtrace_probekey_release(i32* %8)
  %40 = load i32, i32* %12, align 4
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %21, %17
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @LCK_MTX_ASSERT(i32*, i32) #1

declare dso_local i32 @dtrace_ecb_create_enable(i32*, %struct.TYPE_12__*, i32*) #1

declare dso_local i32 @dtrace_probekey(i32*, i32*) #1

declare dso_local i32 @dtrace_cred2priv(i32, i32*, i32*, i32*) #1

declare dso_local i32 @dtrace_match(i32*, i32, i32, i32, i32 (i32*, %struct.TYPE_12__*, i32*)*, %struct.TYPE_12__*, i32*) #1

declare dso_local i32 @dtrace_probekey_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
